# vector-py

./: README.md  pyproject.toml  reformat.sh
.github/workflows/: release.yaml  test.yaml
tests/: __init__.py  conftest.py
tests/core/: test_delete.py  test_fetch.py  test_info.py  test_namespace_operations.py  test_query.py  test_range.py  test_reset.py  test_resumable_query.py  test_stats.py  test_update.py  test_upsert.py
upstash_vector/: __init__.py  client.py  errors.py  http.py  types.py  utils.py
upstash_vector/asyncio/: client.py
upstash_vector/core/: index_operations.py  resumable_query.py
