[tool.poetry]
name = "upstash-vector"
version = "0.1.6"
description = "Serverless Vector SDK from Upstash"
license = "MIT"
authors = ["Upstash <support@upstash.com>"]
maintainers = ["Upstash <support@upstash.com>"]
readme = "README.md"
repository = "https://github.com/upstash/vector-py"
keywords = ["Upstash Vector", "Serverless Vector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries",
]

packages = [{ include = "upstash_vector" }]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"
types-pygments = "^2.17.0.20240106"
types-colorama = "^0.4.15.20240106"
types-setuptools = "^69.0.0.20240115"
pytest = "^7.4.4"
pytest-asyncio="^0.20.0"
ruff = "^0.1.13"
numpy = [
    {version = "<=1.24.4", python = "<=3.8"},
    {version = ">=1.25.0", python = ">=3.9"}
]
pandas = "^2.0.3"
pandas-stubs = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
